...
"validating_title" = "Validating";
"unknown_title" = "(unknown)";
"retry_title" = "Retry";
"ok" = "Ok";
"submit" = "Submit";
"cancel" = "Cancel";
"delete" = "Delete";
"download" = "Download";
"set" = "Set";
"open" = "Open";
"settings" = "Settings";
"continue" = "Continue";
"confirm" = "Confirm";
"warning" = "Warning";
"error" = "Error";
"allow" = "Allow";
"later" = "Later";
"forward" = "Forward";
"save" = "Save";
"to" = "to";
"cc" = "cc";
...
"compose_enter_subject" = "Enter subject";
"compose_enter_secure" = "Enter secure message";
"compose_recipient_from" = "From";
"compose_recipient_to" = "To";
"compose_recipient_cc" = "Cc";
"compose_recipient_bcc" = "Bcc";
"compose_subject" = "Subject";
"compose_enable_google_contacts_search" = "Enable Google Contact Search";
"compose_no_contacts_found" = "No contacts found";
"compose_uploading" = "Uploading";
"compose_sent" = "Sent";
"compose_missing_contacts_scopes" = "To enable contacts search, please allow this device to access %@ of your Google account";
"compose_password_link" = "%@ has sent you a password-encrypted email.\n\nTo open message copy and paste the following link: %@";
...
"draft_saved" = "Draft saved";
"draft_deleted" = "Draft deleted";
"draft_error" = "Failed to save draft: %@";

// Folders
"folder_all_mail" = "All Mail";
"folder_all_inbox" = "Inbox";
"folder_add_account" = "Add account";
"folder_settings" = "Settings";
"folder_INBOX" = "Inbox";
"folder_CHAT" = "Chat";
"folder_SENT" = "Sent";
"folder_IMPORTANT" = "Important";
...
"sign_in_privacy" = "Privacy";
"sign_in_terms" = "Terms";
"sign_in_security" = "Security";
"sign_in_description" = "Connect your email account\nto send encrypted messages";
"sign_in_gmail" = "Continue with Gmail";
"sign_in_outlook" = "Continue with Outlook";
"sign_in_other" = "Other email provider";

// Setup
"setup_title" = "Set up FlowCrypt";
"setup_description" = "OpenPGP email encryption";
"setup_enter" = "Enter your pass phrase";
"setup_load" = "Load Account";
"setup_use_another" = "Use Another Account";
"setup_no_backups" = "No backups found on this account";
"setup_enter_pass_phrase" = "Enter pass phrase";
"setup_wrong_pass_phrase_retry" = "Wrong pass phrase, please try again";
"setup_backup_email" = "This email contains a key backup. It will help you access your encrypted messages from other computers (along with your pass phrase). You can safely leave it in your inbox or archive it.\n\nThe key below is protected with pass phrase that only you know. You should make sure to note your pass phrase down.\n\nDO NOT DELETE THIS EMAIL. Write us at human@flowcrypt.com so that w
"setup_initial_create_key" = "Create a new key";
"setup_initial_import_key" = "Import my key";
"setup_create_key_title" = "Create key";
"setup_choose_pass_title" = "Choose pass phrase";
"setup_save_pass_locally" = "Save pass phrase";
"setup_save_pass_temporarily" = "Remember pass phrase temporarily";
"setup_enter_pass_phrase" = "Please enter pass phrase";
"setup_providers" = "Email Provider";
"setup_pass_phrase_title" = "Pass Phrase";
"setup_pass_phrase_confirm" = "Confirm Pass Phrase";

// Setup IMAP
"setup_imap_email" = "Email";
"setup_imap_password" = "Password";
"setup_imap_username" = "Username";
...
"imap_error_folder_required" = "Folder path should not be nil for IMAP";
"imap_error_create_search_expression" = "Could not create search expression";

"submit_key_error" = "Failed to submit Public Key";

"message_permanently_delete" = "You're about to permanently delete %@";
"message_permanently_delete_title" = "Are you sure?";
"draft_delete_confirmation" = "Delete draft?";


"contacts_fingerprint" = "Fingerprint:";
"contacts_created" = "Created:";
"contacts_expires" = "Expires:";
...
