...
        logger.logInfo("setup navigation bar with \(trashFolderPath ?? "N/A")")
        logger.logInfo("currentFolderPath \(currentFolderPath)")

        let helpButton = NavigationBarItemsView.Input(image: UIImage(named: "help_icn")) { [weak self] in
            self?.handleInfoTap()
        }
        let archiveButton = NavigationBarItemsView.Input(image: UIImage(named: "archive")) { [weak self] in
            self?.handleArchiveTap()
        }
        let trashButton = NavigationBarItemsView.Input(image: UIImage(named: "trash")) { [weak self] in
            self?.handleTrashTap()
        }
        let unreadButton = NavigationBarItemsView.Input(image: UIImage(named: "mail")) { [weak self] in
...
            preferredStyle: .alert
        )
        alert.addAction(
            UIAlertAction(title: "Cancel", style: .default)
        )
        alert.addAction(
            UIAlertAction(title: "OK", style: .default) { _ in
                completion()
            }
        )
        present(alert, animated: true, completion: nil)
    }
}
...
